Moved font files

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,16 +16,18 @@
     
 }
 
+/*  {Astro.resolve('../styles/style.css')} */
+
 /* Special fonts */
 @font-face {
     font-family: Morse;
-    src: url("/assets/font/morse.ttf") format("truetype");
+    src: url("font/morse.ttf") format("truetype");
 }
 
 @font-face {
     font-family: Radio;
-    src: url("/assets/font/3Gelombang radio.eot");
-    src: url("/assets/font/3Gelombang radio.eot?#iefix") format("embedded-opentype"),url("/assets/font/3Gelombang radio.ttf") format("truetype");
+    src: url("font/3Gelombang radio.eot");
+    src: url("font/3Gelombang radio.eot?#iefix") format("embedded-opentype"),url("font/3Gelombang radio.ttf") format("truetype");
 }
 
 html {
