--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,12 +4,9 @@
 /*  */
 ::before, ::after { text-decoration: inherit; vertical-align: inherit; }
 
-img,
-picture {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
+img, picture { max-width: 100%; height: auto; display: block; }
+
+ul { list-style: none; }
 
 label { display: inline-block; padding-bottom: 0.5rem; }
 
@@ -89,3 +86,61 @@ tfoot tr { border-bottom: 0; }
 tr.no-top-border > td { border-top: none; }
 
 caption { padding-bottom: 5px; font-size: 1.1rem; }
+
+/* Default button */
+.btn {
+  display: inline-block;
+  zoom: 1;
+  line-height: normal;
+  white-space: nowrap;
+  vertical-align: middle;
+  text-align: center;
+  cursor: pointer;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  padding: 0.5em 0.6em;
+  color: rgba(0, 0, 0, 0.80);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: #E6E6E6; /* windows grey */
+  text-decoration: none;
+  border-radius: 4px;
+  height: fit-content;
+}
+
+/* Turn a button into a link */
+.btn-link {
+  padding: 0;
+  margin: 0;
+  background: none;
+  text-align: left;
+  width: auto;
+  color: inherit;
+  outline: none;
+}
+
+.btn:hover, .button:focus { filter: brightness(85%); }
+.btn:focus { outline: 0; }
+
+.btn.no-outline { background: none; border: none; box-shadow: none; border-radius: 0; }
+.btn.no-outline:focus, .btn.no-outline:hover, .btn.no-outline:active { filter: none; outline: 0; }
+.btn.no-outline:hover { background: #eeeeee; }
+.btn.no-background { background: none; }
+
+/* Button sizes */
+.btn.large { font-size: 1.1em;   }
+.btn.small { font-size: 0.85em;  }
+.btn.tiny  { font-size: 0.70em;  }
+.btn.xtiny { font-size: 0.60em;  }
+.btn.round { border-radius: 50%; }
+.btn.btn-icon { margin-right: 1em; vertical-align: middle; }
+
+.is-disabled { cursor: not-allowed; opacity: 0.5; }
+
+
+[hidden], .hidden { display: none;}
