Added the pages back with new styling.

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -46,18 +46,18 @@ let {title} = Astro.props;
             <nav class="hidden">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/HamRadio/">Ham Radio</a></li>
-                    <li><a href="/Nets/">Nets</a></li>
-                    <li><a href="/HamFest/">Hamfest</a></li>
-                    <li><a href="/Resources">Resources</a></li>
-                    <li><a href="/Repeaters/">Repeaters</a></li>
-                    <li><a href="/ARES/">ARES</a></li>
-                    <li><a href="/Code/">Code</a></li>
-                    <li><a href="/Exams/">Exams</a></li>
-                    <li><a href="/Membership/">Membership</a></li>
-                    <li><a href="/Contact/">Contact</a></li>
-                    <li><a href="/Memorial/">Memorial</a></li>
-                    <li><a href="/Visiting/">Visiting Amateurs</a></li>
+                    <li><a href="/hamradio/">Ham Radio</a></li>
+                    <li><a href="/nets/">Nets</a></li>
+                    <li><a href="/hamfest/">Hamfest</a></li>
+                    <li><a href="/resources">Resources</a></li>
+                    <li><a href="/repeaters/">Repeaters</a></li>
+                    <li><a href="/ares/">ARES</a></li>
+                    <li><a href="/code/">Code</a></li>
+                    <li><a href="/exams/">Exams</a></li>
+                    <li><a href="/membership/">Membership</a></li>
+                    <li><a href="/contact/">Contact</a></li>
+                    <li><a href="/memorial/">Memorial</a></li>
+                    <li><a href="/visiting/">Visiting Amateurs</a></li>
                 </ul>
             </nav>
     
