updated membership page and add the bylaws page.

--- a/src/pages/membership.astro
+++ b/src/pages/membership.astro
@@ -19,6 +19,9 @@ import MainLayout from '../layouts/MainLayout.astro';
 
         <section>
             <h1 class="pt1-5">How To Join Our Club</h1>
+            <p>
+                Would you like to join PARC? Please review our <a href='/resources/parc_constitution' title='Club Constitution'>club constitution</a> and <a href='/resources/parc_bylaws' title='Club By-Laws'>By-Laws</a>, then fill out the <a href='/resources/parc_membership_form' title='Membership Application'>Membership Application</a>. Please submit the completed application, correct payment amount and a copy of your amateur license (if necessary) to the following address or bring it to any club meeting. Make checks payable to: <em>Playground Amateur Radio Club</em>
+            </p>
 
             <p>
                 You can also email your application to the email address listed below and/or pay for dues using the payment form.
