--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -119,6 +119,9 @@ footer { text-align: center; margin-bottom: 1rem; background-color: var(--banner
 .mt1 { margin-top: 1rem; }
 .mb1 { margin-bottom: 1rem; }
 
+.mt2 { margin-top: 2rem; }
+.mb2 { margin-bottom: 2rem; }
+
 .width-100 { width: 100%; }
 
 .active { background-color: #ffffff;}
