--- a/src/pages/membership.astro
+++ b/src/pages/membership.astro
@@ -12,34 +12,32 @@ import MainLayout from '../layouts/MainLayout.astro';
 
 </style>
 
-
 <MainLayout title = "PARC - Membership">
 
     <main>
 
         <section>
             <h1 class="pt1-5">How To Join Our Club</h1>
+
             <p>
-                Would you like to join PARC? Please review our <a href='/resources/parc_constitution' title='Club Constitution'>club constitution</a> and <a href='/resources/parc_bylaws' title='Club By-Laws'>By-Laws</a>, then fill out the <a href='/resources/parc_membership_form' title='Membership Application'>Membership Application</a>. Please submit the completed application, correct payment amount and a copy of your amateur license (if necessary) to the following address or bring it to any club meeting. Make checks payable to: <em>Playground Amateur Radio Club</em>
+                Would you like to join PARC? Please review our <a href="/resources/parc_constitution">club constitution</a> and <a href="/resources/parc_bylaws">By-Laws</a>, then fill out the <a href="/resources/parc_membership_form">Membership Application</a>. 
             </p>
 
             <p>
-                You can also email your application to the email address listed below and/or pay for dues using the payment form.
+                Please submit the completed application, correct payment amount and a copy of your amateur license (if necessary) to the following address or bring it to any club meeting. Make checks payable to: Playground Amateur Radio Club.
+            </p>
+
+            <ul class="pl1">
+                <li>PARC</li>
+                <li>P.O. Box 873</li>
+                <li>Fort Walton Beach, FL 32549</li>
+            </ul>
+
+            <p>
+                You can also email your application to <a href="mailto:parcfwb@gmail.com">parcfwb@gmail.com</a> and/or pay for dues using the payment method below.
             </p>
 
             <p><strong>Note:</strong> New hams are eligible to receive their first year of membership at no cost.</p>
-            <div>
-                <ul>
-                    <li>PARC</li>
-                    <li>P.O. Box 873</li>
-                    <li>Fort Walton Beach, FL 32549</li>
-                </ul>
-
-                <p>
-                    <a href="mailto:parcfwb@gmail.com">parcfwb@gmail.com</a>
-                </p>
-            </div>
-
 
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="pt1 pb1">
                 <input type="hidden" name="cmd" value="_s-xclick">
