updates to the By-laws, lots of errors when coping from pdf.

--- a/src/pages/resources/parc_bylaws.astro
+++ b/src/pages/resources/parc_bylaws.astro
@@ -23,7 +23,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         <section>
             <h1>Sec. 1 - MEMBERSHIP</h1>
             <p>
-                Applications for full membership by a FCC licensed amateur radio operator shall be submitted for review by the membership at a regular business meeting. Applications for non-voting membership by an individual not currently holding an amateur radio license issued by the FCC, but with an interest in amateur radio, shall be submitted for review at a regular business meeting. Applicants must express a willingness to abide by the Club's Consiitution and By-Laws and such Rules as may be promulgated by the Club. Unless a majority of the voting members present at the next regular business meeting object to the applicant's application, the application is deemed accepted and membership privileges shall be awarded, at the membership level applied for, upon payment of the required dues and assessments. lt is each and every Club member's responsibility to be familiar with the Club's Constitution, By-Laws and Rules. Copies of each shall be made available at the Club's clubhouse and on the Club's website.
+                Applications for full membership by a FCC licensed amateur radio operator shall be submitted for review by the membership at a regular business meeting. Applications for non-voting membership by an individual not currently holding an amateur radio license issued by the FCC, but with an interest in amateur radio, shall be submitted for review at a regular business meeting. Applicants must express a willingness to abide by the Club's Consiitution and By-Laws and such Rules as may be promulgated by the Club. Unless a majority of the voting members present at the next regular business meeting object to the applicant's application, the application is deemed accepted and membership privileges shall be awarded, at the membership level applied for, upon payment of the required dues and assessments. It is each and every Club member's responsibility to be familiar with the Club's Constitution, By-Laws and Rules. Copies of each shall be made available at the Club's clubhouse and on the Club's website.
             </p>
         </section>
 
@@ -40,7 +40,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
                 a. The Executive Committee shall present to the Club membership at the October regular business meeting its recommendation for dues assessment for the following year. This assessment is in accordance with the provisions of Article V of the Club's Constitution for the purpose of providing funds for Club expenses. The second licensed amateur radio operator residing in the same household and at the same address as a regular member is given full membership privileges for a dues assessment of one half of the current Club regular member dues assessment. Any additional licensed amateur radio operators within the same family, residing at the same address, are granted full membership privileges without assessment of additional dues.
             </p>
             <p class="tab">
-                b. Club membership shall be yearly from 1 January To 31" December. New members shall pay prorated portion of one quarter of the current Club regular dues assessment_per quarter.
+                b. Club membership shall be yearly from 1 January To 31 December. New members shall pay prorated portion of one quarter of the current Club regular dues assessment per quarter.
             </p>
         </section>
 
@@ -54,7 +54,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         <section>
             <h1>Sec. 5 - VOTING PRIVIIEGES</h1>
             <p>
-                All paid up amateur full members shall have the privileges of voting. A member shall be considered delinquent if dues are not paid by 1 April. Voting by mail or other pre-approved means shaii be authorized oniy for changes to the Constitution and By-Laws.
+                All paid up amateur full members shall have the privileges of voting. A member shall be considered delinquent if dues are not paid by 1 April. Voting by mail or other pre-approved means shall be authorized oniy for changes to the Constitution and By-Laws.
             </p>
         </section>
 
@@ -82,7 +82,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         <section>
             <h1>Sec. 9 - CLUB PROPERTY</h1>
             <p>
-                All property shall be inventoried by the Club Station Trustee every six months. The inventories will take place in the months of July and January (To coincide with the term of officeoftheCiubOfficers). AliClubpropertywilibetheresponsibiiityoftheClubTrustee. TheClub Secretary, if appropriate, will keep a current list of property by item and serial number.
+                All property shall be inventoried by the Club Station Trustee every six months. The inventories will take place in the months of July and January (to coincide with the term of office of the Club Officers). All Club property will be the responsibiiity of the Club Trustee. The Club Secretary, if appropriate, will keep a current list of property by item and serial number.
             </p>
         </section>
 
@@ -92,16 +92,16 @@ import MainLayout from '../../layouts/MainLayout.astro';
                 The President shall appoint such committees as desired. The following shall be established as a minimum:
             </p>
             <p class="tab">
-                a. <strong>EXE€UTIVE COMMTTTEE:</strong> The Executive Committee shall be composed of the Officers of the Club and the Chairman of the Engineering Committee. The Executive Committee shall be the governing body of the Club and shall perform all duties as prescribed in these By-Laws.
+                a. <strong>EXECUTIVE COMMTTTEE:</strong> The Executive Committee shall be composed of the Officers of the Club and the Chairman of the Engineering Committee. The Executive Committee shall be the governing body of the Club and shall perform all duties as prescribed in these By-Laws.
             </p>
             <p class="tab">
                 b. <strong>ENGINEERING COMMITTEE.</strong> The Engineering Committee shall oversee all planning, installation and maintenance of repeater and station equipment. This committee shall be responsible for the current operation of the Playground Amateur Radio Club repeater(s) and Club station equipment. The committee shall make recommendations to the Executive Committee whenever additional equipment is needed. The Repeater Trustee(s) are permanent members of the Engineering Committee.
             </p>
             <p class="tab">
-                c. <strong>HAMFEST COMMITTEE:</strong> The President shall, at the firsi r-egular business meeting after having taken office, appoint a Hamfest Committee. This committee shall serve concurrently with the President.
+                c. <strong>HAMFEST COMMITTEE:</strong> The President shall, at the firsi regular business meeting after having taken office, appoint a Hamfest Committee. This committee shall serve concurrently with the President.
             </p>
             <p class="tab-2">
-                1. <strong>Duties:</strong> The Hamfest Committee shallorganize, publicize, run, and report on the Hamfest. They shall submit monthly reports either verbally or in writing at each regular business meeting of the Club. In addition, they shall submit a comprehensive written Final report to the Club membership after the event but prior to the end of the fiscal year.
+                1. <strong>Duties:</strong> The Hamfest Committee shall organize, publicize, run, and report on the Hamfest. They shall submit monthly reports either verbally or in writing at each regular business meeting of the Club. In addition, they shall submit a comprehensive written Final report to the Club membership after the event but prior to the end of the fiscal year.
             </p>
             <p class="tab-2">
                 2. <strong>Responsibilities:</strong> The Hamfest Committee shall be responsible for authorizing the Treasurer to make disbursements from the Hamfest fund for Hamfest expenses. They may not authorize expenditures in excess of the funds held within the Hamfest fund unless previous authorization is obtained from the Club membership. The Club membership shall then authorize expenditure limited for the main prizes, which the Hamfest Committee may not exceed. The Hamfest Committee shall be responsible for the selection of the main prizes
@@ -118,7 +118,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
         <section>
             <h1>Sec. 11 - DISBURSEMENTS</h1>
             <p>
-                The Treasurer shall make all disbursements. With the exception of the Hamfest expenses, disbursements from the Hamfest fund at the direction of the Hamfest Committee, the Treasurer shall have prior Club approvai for all disbursements in excess of 5250.00. The Executive Committee may approve disbursements for emergency needs up to a limit of $500.00 per item.
+                The Treasurer shall make all disbursements. With the exception of the Hamfest expenses, disbursements from the Hamfest fund at the direction of the Hamfest Committee, the Treasurer shall have prior Club approval for all disbursements in excess of $250.00. The Executive Committee may approve disbursements for emergency needs up to a limit of $500.00 per item.
             </p>
         </section>
 
@@ -142,8 +142,5 @@ import MainLayout from '../../layouts/MainLayout.astro';
                 In the event that the Playground Amateur Radio Club ceases to exist (does not include a change of name), all Club assets will be donated to the American Radio Relay League (ARRL) Foundation (unless voted on otherwise by Club membership) to be used for the purpose of awarding scholarships to deserving licensed amateur radio operators in the State of Florida.
             </p>
         </section>
-
-
-
     </main>
 </MainLayout>
