--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ let {title} = Astro.props;
             <div class="banner">
                 <div class="banner-title">
                     <h1>W4ZBB</h1>
-                    <h2>Playground Amateur Radion Club</h2>
+                    <h2>Playground Amateur Radio Club</h2>
                 </div>
 
                 <div class="banner-logos">
